# wp-reactor

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  cargo_tree.txt
.cargo/: audit.toml
.claude/: settings.local.json
_gal/: adm.gxl  work.gxl
crates/wf-config/: Cargo.toml
crates/wf-config/src/: admin_api.rs  change.rs  error.rs  fusion.rs  lib.rs  loader.rs  logging.rs  metrics.rs  project.rs  project_remote.rs  runtime.rs  source.rs  types.rs  validate.rs  vars.rs  window.rs
crates/wf-config/src/config_loader/: fusion.rs  fusion_tests.rs  loader.rs  loader_tests.rs  mod.rs  validate.rs
crates/wf-config/src/config_loader/loader/: overlay_paths.rs  raw_tree.rs
crates/wf-config/src/loader_mod/: fusion.rs  loader.rs  mod.rs  validate.rs
crates/wf-config/src/logging_metrics/: logging.rs  metrics.rs  mod.rs
crates/wf-config/src/sink/: build.rs  connector.rs  defaults.rs  group.rs  io.rs  mod.rs  route.rs  validate.rs
crates/wf-config/src/vars/: error.rs  expand.rs  mod.rs  scoped.rs
crates/wf-core/: Cargo.toml
crates/wf-core/src/: error.rs
crates/wf-core/src/alert/: types.rs
crates/wf-core/src/rule/executor/: alert.rs  close_exec.rs  each_exec.rs  eval.rs  match_exec.rs  mod.rs
crates/wf-core/src/rule/match_engine/: close.rs  eval.rs  key.rs  mod.rs  state.rs  step.rs  types.rs
crates/wf-core/src/rule/tests/: contract.rs  executor.rs  helpers.rs
crates/wf-core/src/rule/tests/l2/: execute.rs  joins.rs
crates/wf-core/src/rule/tests/regression/: close.rs
crates/wf-core/src/sink/: dispatch.rs  runtime.rs
crates/wf-core/src/window/: registry.rs  router.rs
crates/wf-core/src/window/buffer/: mod.rs
crates/wf-engine/: Cargo.toml
crates/wf-engine/src/: error.rs  external.rs  lib.rs  main.rs
crates/wf-engine/src/alert/: mod.rs  types.rs
crates/wf-engine/src/match_engine/: contract.rs  mod.rs
crates/wf-engine/src/match_engine/executor/: alert.rs  close_exec.rs  context.rs  each_exec.rs  eval.rs  match_exec.rs  mod.rs
crates/wf-engine/src/match_engine/match_engine/: close.rs  eval.rs  key.rs  mod.rs  state.rs  step.rs  types.rs
crates/wf-engine/src/match_engine/tests/: cep_core.rs  close.rs  contract.rs  executor.rs  helpers.rs
crates/wf-engine/src/match_engine/tests/l2/: baseline.rs  execute.rs  expr.rs  guards.rs  joins.rs  keymap.rs  mod.rs
crates/wf-engine/src/match_engine/tests/l3/: conv.rs  mod.rs  session.rs
crates/wf-engine/src/match_engine/tests/regression/: mod.rs
crates/wf-engine/src/rule/: contract.rs
crates/wf-engine/src/rule/executor/: context.rs  each_exec.rs
crates/wf-engine/src/rule/tests/: executor.rs  helpers.rs
crates/wf-engine/src/rule/tests/l2/: keymap.rs  limits.rs
crates/wf-engine/src/rule/tests/l3/: conv.rs  session.rs
crates/wf-engine/src/rule/tests/regression/: close.rs
crates/wf-engine/src/sink/: dispatch.rs
crates/wf-engine/src/window/: evictor.rs  mod.rs  registry.rs  router.rs
crates/wf-engine/src/window/buffer/: mod.rs  tests.rs  types.rs  watermark.rs
crates/wf-engine/src/window/provider/: mod.rs
crates/wf-lang/: Cargo.toml
crates/wf-lang/src/: error.rs  lib.rs  parse_utils.rs  plan.rs  schema.rs
crates/wf-lang/src/ast/: clauses.rs  contract.rs  conv.rs  events.rs  expr.rs  join.rs  limits.rs  match_.rs  rule.rs
crates/wf-lang/src/checker/: intermediate.rs  mod.rs  scope.rs
crates/wf-lang/src/compiler/: mod.rs
crates/wf-lang/src/explain/: format.rs  sections.rs  tests.rs
crates/wf-lang/src/wfg_parser/: mod.rs  primitives.rs  scenario.rs  syntax.rs
crates/wf-lang/src/wfl_parser/: clauses.rs  expr.rs  (+3 more)
crates/wf-runtime/: Cargo.toml
crates/wf-runtime/src/: admin_api.rs  alert_task.rs  error.rs  evictor_task.rs  lib.rs  metrics.rs  receiver.rs  schema_bridge.rs  sink_build.rs  source.rs  tracing_init.rs
crates/wf-runtime/src/cli/: error.rs  lib.rs  mod.rs
crates/wf-runtime/src/engine_task/: mod.rs  rule_task.rs  task_types.rs  tests.rs  window_lookup.rs
crates/wf-runtime/src/hot_reload/: mod.rs
crates/wf-runtime/src/lifecycle/: bootstrap.rs  compile.rs  mod.rs  reload.rs  signal.rs  spawn.rs  types.rs
crates/wf-runtime/src/source/: mod.rs
crates/wf-runtime/tests/: e2e_datagen.rs  e2e_mvp.rs
crates/wf-vars/: Cargo.toml  README.md
crates/wf-vars/src/: context.rs  error.rs  expand.rs  lib.rs  trace.rs
crates/wfgen/: Cargo.toml
crates/wfgen/src/: loader.rs
crates/wfl/: Cargo.toml
crates/wfl/src/: cmd_explain.rs  cmd_lint.rs  cmd_replay.rs  cmd_replay_verify.rs  cmd_test.rs  main.rs
docs/: learning-path.md  provider-window-plan.md  provider-window.md  source-architecture.md  user-guide.md
docs/design/: architecture.md  arrow-tcp-stream-compatibility.md  backend-maintenance.md  config-variable-resolution.md  error-handling.md  external-function-design.md  warp-fusion.md  wfg-design.md  wfl-design.md
docs/user-guide/: core-concepts.md  index.md  language-reference.md  on-each.md  operations.md  quick-start.md  rule-writing.md  runtime-config.md  tooling.md
examples/: README.md  wfusion.toml
examples/avg/: README.md
examples/avg/scenarios/: dns_tunnel.wfg
examples/close_modes/: README.md
examples/close_modes/rules/: close_demo.wfl
examples/conv/: README.md
examples/conv/scenarios/: top_scanners.wfg
examples/count/: README.md  out.json
examples/count/data/: brute_force_detect.except.jsonl  brute_force_detect.except.meta.jsonl
examples/count/scenarios/: brute_force.wfg
examples/distinct/: README.md
examples/distinct/scenarios/: port_scan.wfg
examples/file_input/: README.md  wfusion.toml
examples/file_input/alerts/: all.jsonl
examples/file_input/data/: port_scan.ndjson
examples/functions/: README.md
examples/multi_step/scenarios/: chain_attack.wfg
examples/pipeline/: README.md
examples/sum/: README.md
examples/sum/scenarios/: data_exfil.wfg
moju/draft/: architecture.mju  moju-layout.json  review.md
moju/draft/domain/: wf-config.facts.json  wf-engine.facts.json  wf-lang.facts.json  wf-runtime.facts.json
moju/model/: dataflow.mju  moju-layout.json
moju/model/domain/: wf-core.facts.json  wf-vars.facts.json
(+60 files in other folders)
