[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
version = "0.1.7" # @gxl:set(version)

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
winnow = "1.0"
wp-connector-api =  "0.10"
wp-core-connectors = { git = "https://github.com/wp-labs/wp-core-connectors.git", branch = "main" }
wf-connector-api = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
tracing-appender = "0.2"
orion-error = { version = "0.8.1", features = ["derive", "serde_json", "toml", "tracing"] }
derive_more = { version = "2.1", features = ["from"] }
thiserror = "2.0"
sha2 = "0.10"
csv = "1.4"
moju-derive = { git = "https://github.com/dayu-sec/moju-derive.git", branch = "main" }
wp-knowledge = { git = "https://github.com/wp-labs/wp-knowledge.git", branch = "main" }
