[package]
name = "wf-config"
edition.workspace = true
license.workspace = true
version.workspace = true
[lib]
name = "wf_config"

[dependencies]
wf-lang = { path = "../wf-lang" }
wf-vars = { path = "../wf-vars" }
serde = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
glob = "0.3"
wp-connector-api = { workspace = true }
serde_json = "1.0"
wildmatch = "2"

[dev-dependencies]
