[package]
name = "wf-config"
edition.workspace = true
license.workspace = true
version.workspace = true
[lib]
name = "wf_config"

[dependencies]
wf-lang = { path = "../wf-lang" }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
orion-error = { workspace = true }
glob = { workspace = true }
wp-connector-api = { workspace = true }
wildmatch = "2"
moju-derive = { workspace = true }

[dev-dependencies]
