[package]
name = "wf-core"
edition.workspace = true
license.workspace = true
version.workspace = true

[lib]
name = "wf_core"

[dependencies]
wf-config = { path = "../wf-config" }
wf-lang = { path = "../wf-lang" }
wp-connector-api = { workspace = true }
wp-model-core = "0.8"
arrow = { version = "54", default-features = false, features = ["ipc"] }
serde = { workspace = true }
serde_json = "1.0"
async-trait = "0.1"
tokio = { version = "1", features = ["sync"] }
log = "0.4"
orion-error = { workspace = true }
derive_more = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
regex = "1"
chrono = "0.4"
moju-derive = { workspace = true }

[dev-dependencies]
arrow = { version = "54", default-features = false, features = ["ipc"] }
