[package]
name = "wf-engine"
edition.workspace = true
license.workspace = true
version.workspace = true

[lib]
name = "wf_engine"
path = "src/lib.rs"

[dependencies]
wf-config = { path = "../wf-config" }
wf-runtime = { path = "../wf-runtime" }
wf-vars = { path = "../wf-vars" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
tracing = { workspace = true }
orion-error = { workspace = true }
