[package]
name = "wf-engine"
edition.workspace = true
license.workspace = true
version.workspace = true

[lib]
name = "wf_engine"

[dependencies]
wf-config = { path = "../wf-config" }
wf-lang = { path = "../wf-lang" }
wp-connector-api = { workspace = true }
wp-model-core = { workspace = true }
arrow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
orion-error = { workspace = true }
derive_more = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true }
moju-derive = { workspace = true }

[dev-dependencies]
arrow = { workspace = true }
