[package]
name = "wf-runtime"
edition.workspace = true
license.workspace = true
version.workspace = true

[lib]
name = "wf_runtime"

[dependencies]
wf-core = { path = "../wf-core" }
wf-config = { path = "../wf-config" }
wf-vars = { path = "../wf-vars" }
wp-connector-api = { workspace = true }
wp-core-connectors = { workspace = true }
wp-arrow = "0.1"
wf-lang = { path = "../wf-lang" }
arrow = { version = "54", default-features = false, features = ["ipc"] }
tokio = { version = "1", features = ["net", "io-util", "sync", "macros", "rt-multi-thread", "signal", "time", "fs"] }
tokio-util = { version = "0.7", features = ["rt"] }
serde_json = "1.0"
log = "0.4"
wp-model-core = "0.8"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
orion-error = { workspace = true }
derive_more = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
arrow = { version = "54", default-features = false, features = ["ipc"] }
wf-config = { path = "../wf-config" }
wf-lang = { path = "../wf-lang" }
wfgen = { path = "../../../warp-fusion/crates/wfgen" }
chrono = "0.4"
tempfile = "3"
serde_json = "1.0"
tracing-subscriber = { workspace = true }
