[package]
name = "wf-runtime"
edition.workspace = true
license.workspace = true
version.workspace = true

[lib]
name = "wf_runtime"

[dependencies]
wf-engine = { path = "../wf-engine" }
wf-config = { path = "../wf-config" }
wp-connector-api = { workspace = true }
wp-core-connectors = { workspace = true }
wp-arrow = "0.1"
wf-lang = { path = "../wf-lang" }
arrow = { workspace = true }
chrono = { workspace = true }
async-broadcast = { workspace = true }
tokio = { version = "1", features = ["net", "io-util", "sync", "macros", "rt-multi-thread", "signal", "time", "fs"] }
tokio-util = { version = "0.7", features = ["rt"] }
serde_json = { workspace = true }
log = { workspace = true }
wp-model-core = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
orion-error = { workspace = true }
derive_more = { workspace = true }
thiserror = { workspace = true }
moju-derive = { workspace = true }
clap = { version = "4", features = ["derive"] }
csv = { workspace = true }
toml = { workspace = true }
wp-knowledge = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
arrow = { workspace = true }
wf-config = { path = "../wf-config" }
wf-lang = { path = "../wf-lang" }
chrono = { workspace = true }
tempfile = "3"
serde_json = { workspace = true }
tracing-subscriber = { workspace = true }
csv = { workspace = true }
wp-knowledge = { workspace = true }
