[package]
name = "wf-vars"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Shared configuration variable resolution and TOML expansion with provenance"
readme = "README.md"
keywords = ["config", "variables", "toml", "provenance"]
categories = ["config", "parser-implementations"]

[lib]
name = "wf_vars"

[dependencies]
orion-error = { workspace = true }
moju-derive = { workspace = true }
toml = { workspace = true }
